[package]
name = "mount-ctrl"
version = "0.2.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"
license = "MIT"
description = "Giant Magellan Telescope mount control system"
repository = "https://github.com/rconan/mount-ctrl"
documentation = "https://docs.rs/mount-ctrl"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[dependencies]
paste = "1.0.6"
simulink-binder = "0.1.1"

[features]
default = ["pdr"]
pdr = []
cdr = []

[build-dependencies]
cc = "1.0.68"
