[package]
name = "mount-ctrl"
version = "1.0.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
description = "Giant Magellan Telescope mount control system"
repository = "https://github.com/rconan/mount-ctrl"
documentation = "https://docs.rs/mount-ctrl"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[workspace]
members = ["sampling1000-damping002", "sampling8000-damping0005"]

[dependencies]
paste = "1.0.6"
simulink-binder = "0.1.1"
thiserror = "1.0.31"
sampling1000-damping002 = { version = "0.1.0", package = "mount-ctrl_sampling1000-damping002", path = "sampling1000-damping002", optional = true }
sampling8000-damping0005 = { version = "0.1.0", package = "mount-ctrl_sampling8000-damping0005", path = "sampling8000-damping0005", optional = true }

[features]
s1000d002 = ["sampling1000-damping002"]
s8000d0005 = ["sampling8000-damping0005"]

[package.metadata.docs.rs]
features = ["s1000d002"]
