[package]
name = "gmt_mount-ctrl"
version = "2.0.1"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
description = "Giant Magellan Telescope mount control system"
repository = "https://github.com/rconan/mount-ctrl"
documentation = "https://docs.rs/mount-ctrl"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[workspace]
members = [
    "sampling1000-damping002",
    "sampling8000-damping0005",
    "sampling1000-damping002_controllers/ze00",
    "sampling1000-damping002_controllers/ze30",
    "sampling1000-damping002_controllers/ze60",
    "sampling8000-damping002_controllers/ze00",
    "sampling8000-damping002_controllers/ze30",
    "sampling8000-damping002_controllers/ze60",
]
[dependencies]
paste = "1.0.6"
simulink-binder = "0.1.1"
thiserror = "1.0.31"
sampling1000-damping002 = { version = "1.0.0", package = "gmt_mount-ctrl_sampling1000-damping002", path = "sampling1000-damping002", optional = true }
sampling8000-damping002 = { version = "1.0.0", package = "gmt_mount-ctrl_sampling8000-damping002", path = "sampling8000-damping002", optional = true }
sampling8000-damping0005 = { version = "1.0.0", package = "gmt_mount-ctrl_sampling8000-damping0005", path = "sampling8000-damping0005", optional = true }

[features]
s1000d002ze00 = ["sampling1000-damping002/ze00"]
s1000d002ze30 = ["sampling1000-damping002/ze30"]
s1000d002ze60 = ["sampling1000-damping002/ze60"]
s8000d002ze00 = ["sampling8000-damping002/ze00"]
s8000d002ze30 = ["sampling8000-damping002/ze30"]
s8000d002ze60 = ["sampling8000-damping002/ze60"]
s8000d0005 = ["sampling8000-damping0005"]

[package.metadata.docs.rs]
features = ["s1000d002ze30"]
